--- a/metadata.yaml
+++ b/metadata.yaml
@@ -49,6 +49,7 @@ subjects:
 - !lcsh 'Witches -- Fiction'
 - !lcsh 'Lancashire (England) -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: 'The Lancashire Witches: A Romance of Pendle Forest'
 url: http://www.gutenberg.org/ebooks/15493
 wikipedia:
